# DeTime

./: .gitignore  404.html  AUTHORS.md  CHANGELOG.md  CITATION.cff  CREDIT.md  DOCS_INDEX.md  ENTRYPOINTS.md  HOT_TREND_LAB_ADDED.md  LICENSE_AUDIT.md  MANIFEST.in  QUANT_TRADING_COLUMN_ADDED.md  QUANT_TRADING_DECOMPOSITION_FIRST_COLUMNS_01_02.md  README.md  RELEASE_MANIFEST.md  SOURCE_ARCHIVE_BOUNDARY.md  THIRD_PARTY_LICENSES.md  hot_trend_lab_file_manifest.csv  index.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: deploy-docs.yml  docs.yml
api/: index.html
architecture/: index.html
benchmarks/software_comparison/: generate_comparison_evidence.py
choose-a-method/: index.html
citation/: index.html
comparison-evidence/: index.html
comparisons/: index.html
config-reference/: index.html
contributing/: index.html
docs/: api.md  architecture.md  citation.md  comparison-evidence.md  comparisons.md  config-reference.md  index.md  install.md  method-cards.md  method-matrix.md  method-references.md  methods.md  ml-workflows.md  notebook-gallery.md  quickstart.md  release-artifacts.md  reproducibility.md  token-benchmarks.md
docs/gallery/: ceemdan.md  emd.md  gabor-cluster.md  ma-baseline.md  memd.md  mssa.md  mstl.md  mvmd.md  robust-stl.md  ssa.md  std.md  stdr.md  stl.md  vmd.md  wavelet.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/tutorials/: cli-and-profiling.md  hot-trend-lab.md  multivariate.md  quant-trading.md
docs/tutorials/hot-trend-lab/: arxiv-research-pulse.md  data-sources.md  open-model-and-developer-attention.md  release-calendar.md  wiki-market-crypto-attention.md
docs/tutorials/quant-trading/: backtesting-frameworks.md  data.md  method-specific-strategy-expansion.md  notebooks.md  strategy-map.md  walkforward.md
examples/hot_trends/: README.md  __init__.py  data.py  decomposition.py  requirements.txt  scoring.py
examples/hot_trends/reports/: source_registry.csv
examples/notebooks/hot_trends/: 00_hot_trend_lab_overview.ipynb  01_arxiv_category_pulse.ipynb  02_arxiv_agent_research_pulse.ipynb  03_huggingface_open_model_pulse.ipynb  04_github_ai_agent_star_velocity.ipynb  05_wikipedia_attention_hype_decay.ipynb  06_crypto_stablecoin_liquidity_pulse.ipynb  07_ai_infrastructure_market_pulse.ipynb  README.md
examples/notebooks/quant_trading/: 00_decomposition_first_quant_trading_roadmap.ipynb  00_quant_trading_column_overview.ipynb  01_detime_trend_following_strategy_lab.ipynb  01_market_data_and_decomposition_feature_factory.ipynb  01_real_market_data_and_detime_features.ipynb  02_decomposition_aware_moving_average_macd.ipynb  02_detime_oscillation_reversion_strategy_lab.ipynb  02_single_asset_timing_vectorbt.ipynb  03_detime_method_specific_strategy_variants.ipynb  03_residual_mean_reversion_rsi_bollinger.ipynb  03_turtle_donchian_trend_filter.ipynb  04_detime_component_pair_trading_cointegration.ipynb  04_pairs_trading_residual_cycle.ipynb  04_turtle_donchian_breakout_volume_confirmation.ipynb  05_cross_sectional_factor_selection.ipynb  README.md  (+7 more)
examples/quant_trading/: README.md  __init__.py  backtest.py  data.py  features.py  frameworks.py  reporting.py  requirements.txt  signals.py  strategy_method_variants.py  strategy_pairs.py
gallery/ceemdan/: index.html
gallery/emd/: index.html
gallery/gabor-cluster/: index.html
gallery/ma-baseline/: index.html
gallery/memd/: index.html
gallery/mssa/: index.html
gallery/mstl/: index.html
gallery/mvmd/: index.html
gallery/robust-stl/: index.html
gallery/ssa/: index.html
gallery/std/: index.html
gallery/stdr/: index.html
gallery/stl/: index.html
gallery/vmd/: index.html
gallery/wavelet/: index.html
install/: index.html
machine-api/: index.html
method-cards/: index.html
method-matrix/: index.html
method-references/: index.html
methods/: index.html
migration/: index.html
ml-workflows/: index.html
notebook-gallery/: index.html
overrides/: main.html
quickstart/: index.html
release-artifacts/: index.html
reproducibility/: index.html
scripts/: check_dist_contents.py  check_doc_consistency.py  generate_column_notebook_pages.py  generate_method_cards.py  generate_reviewer_bundle.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/choose-a-method/: index.html
site/citation/: index.html
site/comparison-evidence/: index.html
site/comparisons/: index.html
site/config-reference/: index.html
site/contributing/: index.html
site/install/: index.html
site/js/: base.js
site/machine-api/: index.html
site/method-cards/: index.html
site/method-matrix/: index.html
site/method-references/: index.html
site/methods/: index.html
site/migration/: index.html
site/ml-workflows/: index.html
site/notebook-gallery/: index.html
site/overrides/: main.html
site/quickstart/: index.html
site/reproducibility/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/token-benchmarks/: index.html
site/why/: index.html
src/detime/: __init__.py  _metadata.py  benchmark.py  cli.py  registry.py
stylesheets/: brand.css  extra.css  extra.css?v=5.css
submission/: cover_letter_jmlr_mloss.md  jmlr_mloss_software_paper_draft.md  software_evidence.md
submission/reviewer_bundle/: INSTALL_VERIFICATION.md  MACHINE_CONTRACT_OVERVIEW.md  REVIEWER_SOFTWARE_MATRIX.md  TESTING_AND_COVERAGE.md
tests/cli/: test_cli.py
tests/core/: test_benchmark_api.py  test_registry_catalog.py  test_runtime_and_io.py
tests/docs/: test_generated_method_docs.py
token-benchmarks/: index.html
tutorials/cli-and-profiling/: index.html
tutorials/hot-trend-lab/: index.html
tutorials/multivariate/: index.html
tutorials/profiling/: index.html
tutorials/quant-trading/: index.html
tutorials/univariate/: index.html
tutorials/visual-comparison/: index.html
tutorials/visual-multivariate/: index.html
tutorials/visual-univariate/: index.html
why/: index.html
(+126 files in other folders)
