[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12",
  "wheel>=0.43",
]
build-backend = "scikit_build_core.build"

[project]
name = "de-time"
version = "0.1.1"
description = "De-Time is workflow-oriented research software for reproducible time-series decomposition."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Zipeng Wu" },
]
keywords = [
  "de-time",
  "time series",
  "decomposition",
  "research software",
  "signal processing",
  "multivariate time series",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "numba>=0.58",
  "pywavelets>=1.5",
  "tqdm>=4.66",
  "pydantic>=2.0",
  "sympy>=1.10",
]

[project.optional-dependencies]
multivar = [
  "PySDKit>=0.4.23",
]
docs = [
  "mkdocs>=1.6",
]
notebook = [
  "jupyterlab>=4",
  "ipykernel>=6",
  "nbformat>=5.10",
  "nbclient>=0.10",
]
dev = [
  "build>=1.2",
  "pytest>=7.4",
  "pytest-cov>=5.0",
  "mkdocs>=1.6",
  "tiktoken>=0.7",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/systems-mechanobiology/De-Time"
Repository = "https://github.com/systems-mechanobiology/De-Time"
Issues = "https://github.com/systems-mechanobiology/De-Time/issues"
Documentation = "https://systems-mechanobiology.github.io/De-Time/"

[project.scripts]
detime = "detime.cli:main"
tsdecomp = "tsdecomp.cli:main"

[tool.scikit-build]
cmake.version = ">=3.24"

[tool.scikit-build.wheel]
packages = []

[tool.scikit-build.sdist]
include = [
  "README.md",
  "CHANGELOG.md",
  "CITATION.cff",
  "START_HERE.md",
  "DOCS_INDEX.md",
  "DESIGN.md",
  "ENTRYPOINTS.md",
  "LICENSE",
  "CONTRIBUTING.md",
  "CODE_OF_CONDUCT.md",
  "SECURITY.md",
  "ROADMAP.md",
  "CHANGELOG.md",
  "CITATION.cff",
  "PUBLISHING.md",
  "MANIFEST.in",
  "CMakeLists.txt",
  "cibuildwheel.toml",
  "docs/**/*.md",
  "docs/**/*.png",
  "docs/**/*.jpg",
  "docs/**/*.jpeg",
  "docs/**/*.gif",
  "docs/**/*.svg",
  "docs/**/*.txt",
  "docs/**/*.py",
  "docs/**/*.ipynb",
  "docs/**/*.zip",
  "docs/**/*.json",
  "docs/**/*.csv",
  "docs/**/*.yml",
  "docs/**/*.yaml",
  "benchmarks/**/*.py",
  "benchmarks/**/*.md",
  "benchmarks/**/*.json",
  "benchmarks/**/*.csv",
  "examples/**/*.py",
  "examples/**/*.md",
  "examples/**/*.ipynb",
  "examples/**/*.csv",
  "examples/**/*.json",
  "examples/**/*.txt",
  "examples/**/*.yml",
  "examples/**/*.yaml",
  "evals/**/*.py",
  "evals/**/*.md",
  "evals/**/*.json",
  "native/**/*.cpp",
  "native/**/*.hpp",
  "native/**/*.h",
  "src/detime/**/*.py",
  "src/detime/**/*.json",
  "src/tsdecomp/__init__.py",
  "src/tsdecomp/__main__.py",
  "src/tsdecomp/_compat.py",
  "src/tsdecomp/cli.py",
  "tests/**/*.py",
  "scripts/check_dist_contents.py",
  "scripts/check_doc_consistency.py",
  "scripts/release_smoke_matrix.py",
  "scripts/generate_performance_snapshot.py",
  "scripts/generate_schema_assets.py",
  "scripts/generate_method_cards.py",
  "scripts/generate_notebook_gallery.py",
  "scripts/generate_tutorial_assets.py",
  "scripts/generate_reviewer_bundle.py",
]
exclude = [
  ".DS_Store",
  "**/.DS_Store",
  "**/__pycache__",
  "**/__pycache__/*",
  "**/*.pyc",
  "**/*.pyo",
  ".pytest_cache",
  "**/.pytest_cache/**",
  "site",
  "submission/**",
  "AGENT_*",
  "De-Time_*.md",
  "JMLR_*",
  "docs/tutorials/visual-benchmark.md",
  "docs/assets/generated/tutorials/visual-benchmark/**",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
