[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12",
  "wheel>=0.43",
]
build-backend = "scikit_build_core.build"

[project]
name = "de-time"
version = "0.1.2"
description = "DeTime is Python and CLI research software for reproducible time-series decomposition."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Zipeng Wu" },
]
keywords = [
  "de-time",
  "time series",
  "decomposition",
  "research software",
  "signal processing",
  "multivariate time series",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "numba>=0.58",
  "pywavelets>=1.5",
  "tqdm>=4.66",
  "pydantic>=2.0",
  "sympy>=1.10",
]

[project.optional-dependencies]
emd = [
  "EMD-signal>=1.6",
]
multivar = [
  "PySDKit>=0.4.23",
]
neural = [
  "torch>=2.0",
]
docs = [
  "mkdocs>=1.6",
]
notebook = [
  "jupyterlab>=4",
  "ipykernel>=6",
  "nbformat>=5.10",
  "nbclient>=0.10",
]
dev = [
  "build>=1.2",
  "pytest>=7.4",
  "pytest-cov>=5.0",
  "mkdocs>=1.6",
  "tiktoken>=0.7",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/systems-mechanobiology/DeTime"
Repository = "https://github.com/systems-mechanobiology/DeTime"
Issues = "https://github.com/systems-mechanobiology/DeTime/issues"
Documentation = "https://systems-mechanobiology.github.io/DeTime/"

[project.scripts]
detime = "detime.cli:main"
tsdecomp = "tsdecomp.cli:main"

[tool.scikit-build]
cmake.version = ">=3.24"

[tool.scikit-build.wheel]
packages = []

[tool.scikit-build.sdist]
inclusion-mode = "manual"
include = [
  "/pyproject.toml",
  "/README.md",
  "/CHANGELOG.md",
  "/CITATION.cff",
  "/AUTHORS.md",
  "/CREDIT.md",
  "/RELEASE_MANIFEST.md",
  "/SOURCE_ARCHIVE_BOUNDARY.md",
  "/THIRD_PARTY_LICENSES.md",
  "/LICENSE_AUDIT.md",
  "/START_HERE.md",
  "/DOCS_INDEX.md",
  "/DESIGN.md",
  "/ENTRYPOINTS.md",
  "/LICENSE",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
  "/SECURITY.md",
  "/ROADMAP.md",
  "/PUBLISHING.md",
  "/MANIFEST.in",
  "/CMakeLists.txt",
  "/cibuildwheel.toml",
  "docs/*.md",
  "docs/gallery/*.md",
  "docs/tutorials/*.md",
  "docs/tutorials/quant-trading/*.md",
  "docs/tutorials/hot-trend-lab/*.md",
  "docs/assets/brand/**",
  "docs/assets/illustrations/**",
  "docs/assets/generated/home/**",
  "docs/assets/generated/evidence/comparison_*.csv",
  "docs/assets/generated/evidence/comparison_evidence.json",
  "docs/assets/generated/evidence/comparison_evidence.md",
  "docs/assets/generated/evidence/coverage_*.json",
  "docs/assets/generated/evidence/method_runtime_matrix.*",
  "docs/assets/generated/evidence/performance_snapshot.*",
  "docs/assets/generated/evidence/workflow_comparison.json",
  "docs/stylesheets/*.css",
  "docs/overrides/*.html",
  "docs/robots.txt",
  "docs/googlec8d99a452cb93b2a.html",
  "examples/*.py",
  "examples/data/**/*.csv",
  "examples/workflow_comparisons/*.py",
  "examples/workflow_comparisons/*.md",
  "native/**/*.cpp",
  "native/**/*.hpp",
  "native/**/*.h",
  "src/detime/**/*.py",
  "src/detime/**/*.json",
  "src/tsdecomp/__init__.py",
  "src/tsdecomp/__main__.py",
  "src/tsdecomp/_compat.py",
  "src/tsdecomp/cli.py",
  "tests/**/*.py",
  "scripts/check_dist_contents.py",
  "scripts/check_doc_consistency.py",
  "scripts/release_smoke_matrix.py",
  "scripts/generate_performance_snapshot.py",
  "scripts/generate_schema_assets.py",
  "scripts/generate_method_cards.py",
  "scripts/generate_notebook_gallery.py",
  "scripts/generate_tutorial_assets.py",
  "scripts/generate_reviewer_bundle.py",
]
exclude = [
  "*",
  ".DS_Store",
  "**/.DS_Store",
  "**/__pycache__",
  "**/__pycache__/*",
  "**/*.pyc",
  "**/*.pyo",
  ".pytest_cache",
  ".pytest_cache/",
  ".pytest_cache/**",
  "/.pytest_cache/",
  "/.pytest_cache/**",
  ".pytest_cache/README.md",
  "**/.pytest_cache/**",
  "site",
  "submission/**",
  "AGENT_*",
  "benchmarks/**",
  "evals/**",
  "examples/hot_trends/**",
  "examples/hot_trends/*",
  "examples/hot_trends/**/*",
  "examples/hot_trends/README.md",
  "examples/notebooks/**",
  "examples/notebooks/",
  "examples/notebooks/*",
  "examples/notebooks/**/*",
  "/examples/notebooks/",
  "/examples/notebooks/**",
  "examples/notebooks/quant_trading/README.md",
  "examples/notebooks/quant_trading/_legacy/README.md",
  "/examples/notebooks/quant_trading/README.md",
  "/examples/notebooks/quant_trading/_legacy/README.md",
  "examples/quant_trading/**",
  "examples/quant_trading/*",
  "examples/quant_trading/**/*",
  "examples/quant_trading/README.md",
  "examples/quant_trading/data/README.md",
  "docs/tutorials/hot-trend-lab/notebooks/**",
  "docs/tutorials/quant-trading/notebooks/**",
  "docs/assets/generated/evidence/agent_eval_summary*",
  "docs/assets/generated/evidence/token_benchmarks*",
  "DeTime_*.md",
  "JMLR_*",
  "docs/tutorials/visual-benchmark.md",
  "docs/assets/generated/tutorials/visual-benchmark/**",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
